:hammer: Fixed the font size on the homepage serve section to not break if device width is too small.

--- a/devwp/sass/utilities/_typography.scss
+++ b/devwp/sass/utilities/_typography.scss
@@ -99,6 +99,12 @@ h5 {
   }
 }
 
+@media screen and (max-width: 39.9375em) {
+.small-font-mobile {
+  font-size: 1.8em;
+  }
+}
+
 
 //*********************************************
 //*************** PARAGRAPHS ******************
